--- a/tema_oscuro_C5S/index.html
+++ b/tema_oscuro_C5S/index.html
@@ -11,7 +11,7 @@
   <body class="dark">
     <div class="btnTema">
       <h2 id="cambioTema" class="cambiarTextoOscuro"></h2>
-      <label onclick="temaOscuro()" class="switch">
+      <label class="switch">
         <input type="checkbox" />
         <span class="slider round"></span>
       </label>
