--- a/ToDo_inicial/mis-tareas.html
+++ b/ToDo_inicial/mis-tareas.html
@@ -23,7 +23,7 @@
 
 
   <!-- logica de la página -->
-  <script src="./scripts/taks.js"></script>
+  <script src="./scripts/tasks.js" defer></script>
 
   <title>ToDo</title>
 </head>
@@ -46,7 +46,7 @@
   <form class="nueva-tarea">
     <div class="not-done "></div>
     <input id="nuevaTarea" type="text" placeholder="Nueva tarea">
-    <button type="submit">
+    <button id="buttonTarea" type="submit">
       <img src="./assets/plus.png" alt="Agregar Tarea">
     </button>
   </form>
@@ -54,28 +54,7 @@
 
   <ul class="tareas-pendientes">
     <div id="skeleton">
-      <li class="tarea">
-        <div class="not-done"></div>
-        <div class="descripcion">
-          <p class="nombre">Nueva tarea</p>
-          <p class="timestamp">Creada: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarea">
-        <div class="not-done"></div>
-        <div class="descripcion">
-          <p class="nombre">Nueva tarea</p>
-          <p class="timestamp">Creada: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarea">
-        <div class="not-done"></div>
-        <div class="descripcion">
-          <p class="nombre">Nueva tarea</p>
-          <p class="timestamp">Creada: 15/07/21</p>
-        </div>
-      </li>
-
+      
     </div>
   </ul>
 
