--- a/ToDo_inicial/signup.html
+++ b/ToDo_inicial/signup.html
@@ -11,8 +11,6 @@
   <link rel="stylesheet" href="styles/ingreso.css">
 
   <!-- ---------------------- logica aplicada en register -------------------- -->
-  <!--<script src="/scripts/utils.js"></script> -->
-  
 
 </head>
 
@@ -27,7 +25,7 @@
         <p>To-Do App</p>
       </div>
 
-      
+
       <label>
         Nombre:
         <input id="name" type="text">
@@ -54,7 +52,7 @@
       </label>
       <ul id="rePassError"></ul>
 
-      
+
       <button>Crear Cuenta</button>
 
     </form>
@@ -62,6 +60,10 @@
       <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
     </div>
   </div>
+
+  <script src="/scripts/validations.js"></script>
+  <script src="/scripts/showErros.js"></script>
+  <script src="/scripts/apiSignup.js"></script>
   <script src="./scripts/signup.js"></script>
 </body>
 
