--- a/cronometro_C8/index.html
+++ b/cronometro_C8/index.html
@@ -2,28 +2,34 @@
 <html>
 
 <head>
-    <title>Parcel Sandbox</title>
+    <title>Cronómetro</title>
     <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    
-    <div class="text-center">
-        <h1 class="m-5">CRONOMETRO</h1>
-        <div class="d-flex">
-            <button id="pararArrancar">Parar</button>
-            <button id="reanudar">Reanudar</button>
-            <div id="number"></div>
+    <div class="container">
+        <h1>Cronómetro</h1>
+        <div class="crono">
+            <div id="number">0</div>
+            <div class="btn">
+                <button id="start">Iniciar</button>
+                <button id="pause">Pausar</button>
+                <button id="stop">Parar</button>
+            </div>
+        </div>
+        <div class="register">
+            <div class="registerPause">
+                <h3>Registros al pausar</h3>
+            </div>
+            <div class="registerStop">
+                <h3>Registros al parar</h3>
+            </div>
         </div>
     </div>
-
-</body>
-<script src="js/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
