Update mensajes con SweetAlert2

--- a/ToDo_inicial/index.html
+++ b/ToDo_inicial/index.html
@@ -43,7 +43,7 @@
       <a href="signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
-
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/scripts/validations.js"></script>
   <script src="/scripts/showErros.js"></script>
   <script src="/scripts/apiIndex.js"></script>
