--- a/ToDo_inicial/mis-tareas.html
+++ b/ToDo_inicial/mis-tareas.html
@@ -62,7 +62,7 @@
   <ul class="tareas-terminadas">
 
   </ul>
-
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
