--- a/ToDo_inicial/signup.html
+++ b/ToDo_inicial/signup.html
@@ -60,7 +60,7 @@
       <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
     </div>
   </div>
-
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/scripts/validations.js"></script>
   <script src="/scripts/showErros.js"></script>
   <script src="/scripts/apiSignup.js"></script>
