Add spinner in signup and index

--- a/ToDo_inicial/signup.html
+++ b/ToDo_inicial/signup.html
@@ -6,11 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo</title>
-
-  <!-- ---------------- estilos compartidos de login y signup ---------------- -->
+  <link rel="stylesheet" href="styles/loader.css">
   <link rel="stylesheet" href="styles/ingreso.css">
-
-  <!-- ---------------------- logica aplicada en register -------------------- -->
 
 </head>
 
@@ -60,6 +57,7 @@
       <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
     </div>
   </div>
+  <script src="/scripts/loader.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/scripts/validations.js"></script>
   <script src="/scripts/showErros.js"></script>
