--- a/ToDo_inicial/index.html
+++ b/ToDo_inicial/index.html
@@ -6,11 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo</title>
-
-  <!-- ---------------- estilos compartidos de login y signup ---------------- -->
+  <link rel="stylesheet" href="styles/loader.css">
   <link rel="stylesheet" href="styles/ingreso.css">
 
-  <!-- ---------------------- logica aplicada en login ----------------------- -->
 </head>
 
 <body>
@@ -43,6 +41,7 @@
       <a href="signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
+  <script src="/scripts/loader.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/scripts/validations.js"></script>
   <script src="/scripts/showErros.js"></script>
