--- a/ToDo_inicial/index.html
+++ b/ToDo_inicial/index.html
@@ -41,12 +41,8 @@
       <a href="signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
-  <script src="/scripts/loader.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/scripts/validations.js"></script>
-  <script src="/scripts/showErros.js"></script>
-  <script src="/scripts/apiIndex.js"></script>
-  <script src="/scripts/index.js"></script>
+  <script src="/scripts/index.js" type="module"></script>
 </body>
 
 </html>
