--- a/ToDo_inicial/mis-tareas.html
+++ b/ToDo_inicial/mis-tareas.html
@@ -23,7 +23,7 @@
 
 
   <!-- logica de la página -->
-  <script src="./scripts/tasks.js" defer></script>
+  <script src="./scripts/tasks.js" type="module" defer></script>
 
   <title>ToDo</title>
 </head>
